[tool.poetry]
name = "tealog"
version = "0.1.0"
description = ""
authors = ["conorreid <conor.will.reid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask-wtf = "^0.14.3"
flask = "^1.1.2"
flask-login = "^0.5.0"
flask_cors = "^3.0.10"
uWSGI = "^2.0.19"
flask_sqlalchemy = "^2.4.4"
python-dotenv = "^0.15.0"
email_validator = "^1.1.2"
flask_assets = "^2.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
